--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -17,6 +17,8 @@
     margin: 0 auto;
     justify-content: center;
     align-items: center;
+    width: 2em;
+    height: 2em;
   }
   .logo {
     background-color: white;
@@ -92,6 +94,7 @@
     height: 100vh; 
     width: 150px; 
     display: flex; 
+    padding-top: 25px;
     flex-direction: column; 
     justify-content: space-between;
   }
