Modificacion del modal del empleado
Aumento de campos en la base de datos y modificación en el modal de agregar y editar a un nuevo empleado

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,10 @@ body{
   background-position: left top;
   background-attachment: fixed;
 }
+.modal-tamanio {
+  position: relative;
+  padding: 40px !important;
+}
 .formulario {
   background: rgba(0, 0, 0, .1);
   padding: 20px;
