--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -122,6 +122,7 @@
   }
   .img__perfil{
     border-radius: 100%;
+    object-fit: cover;
   }
 
   /* USO DEL GRID PARA ORGANIZAR Y ESTRUCTURAR LA ETIQUETA DIV CON ID GRID-PERFIL*/
@@ -1509,4 +1510,28 @@
   #logros div p{
     font-size: 20px;
   }
+}
+
+
+.circular-progress {
+  position: relative;
+  height: 110px;
+  width: 110px;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+}
+.circular-progress::before {
+  content: "";
+  display: block !important;
+  position: absolute;
+  height: 84%;
+  width: 84%;
+  background-color: #fff;
+  border-radius: 50%;
+}
+.value-container {
+  position: relative;
+  font-size: 20px;
+  color: black;
 }
