--- a/css/estilos_practicante.css
+++ b/css/estilos_practicante.css
@@ -622,6 +622,7 @@
 }
 .buttons {
   margin-bottom: 40px;
+  margin-left: 8%;
 }
 
 .buttons button {
@@ -654,6 +655,7 @@
   color: #2733bf;
   cursor: pointer;
   font-size: 1.3em; 
+  margin-bottom: 10px;
 }
 .calendar_prev {
   margin-right: 2px; 
