--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,6 +4,19 @@ body{
   background-position: left top;
   background-attachment: fixed;
 }
+#addnew{
+    position: fixed;
+    z-index: 50;
+    top: 80px;
+    left: 50px;
+    background-color: #1e3c8f;
+}
+#secondmodal{
+  position: absolute;
+  z-index: 100;
+  top: 20px;
+  left: 250px;
+}
 .modal-tamanio {
   position: relative;
   padding: 40px !important;
